style.css
/* Main */
html{
    margin: 0;
}
body {
    margin: 0;
    font-family: 'Outfit', sans-serif;
    background-color: #ffffff;
    min-height: 100vh;
    min-width: 100vw;
    display: flex;
    flex-direction: column;
    overflow-y: auto;
}

.navbar {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    width: auto;
    display: flex;
    justify-content: space-between;
    align-items: center;
    background: transparent;
    backdrop-filter: none;
    padding: 40px 100px;
    z-index: 1000;
    transition: padding 0.5s ease, color 0.5s ease;
}
.logo {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100%;
}
.logo img {
    height: 40px;
}

nav ul {
    list-style: none;
    margin: 0;
    padding: 0;
    display: flex;
    gap: 10vw;
}
nav a {
    text-decoration: none;
    color: #a3a3a3;
    font-weight: 400;
    transition: color 0.4s ease;
}
nav a:hover{
    color: #494949;
}
.text-item-container a{
    font-size: 25px;
}
.hide-in-pc {
    display: none;
}

/* Landing Page */
.landing-page {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 0 100px 50px 0;
    gap: 0px;
    max-width: 100vw;
    box-sizing: border-box;
    margin-top: 50px;
    margin-bottom: 20px;
}

.landing-images {
    margin: 0;
    padding-right: 100px;
    display: flex;
    flex: 0 0 68%;
    max-width: 68%;
    flex-direction: row;
    gap: 30px;
    box-sizing: border-box;
}
.landing-images img {
    max-width: 33%;
    height: auto;
    flex: 1 1 auto;
    object-fit: cover;
}
.left-crop {
    margin-left: -3vw;
}

.landing-page .landing-content {
    max-width: 32%;
    flex: 0 0 32%;
    box-sizing: border-box;
    color: #202020;
}

h1 {
    font-weight: 700;
    font-size: 85px;
    margin: 0;
    transition: font-size 0.4s;
    line-height: 1.2;
}

.landing-page .landing-content p {
    font-weight: 300;
    font-size: 42px;
    line-height: 1.5;
    transition: font-size 0.4s;
    margin-top: 18px;
}

/* Sections */
.section-container {
    padding: 8.2vw 9vw 9.2vw 9vw;
    text-align: left;
}
.background-black{
    background-color: #202020;
    color: #fff;
}
.background-white{
    background-color: #fff;
    color: #202020;
}
.section-container h1 {
    margin-bottom: 2.6vw;
}
  
.content-container {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(550px, 1fr));
    gap: 2.3vw;
    justify-items: center;
}  
.content-item {
    width: 100%;
    max-width: 600px;
    overflow: hidden;
    border: 0;
    border-radius: 0;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    background-color: #fff;
    transition: transform 0.3s ease, box-shadow 0.3s ease;
}
.content-item img {
    width: 100%;
    height: auto;
    display: block;
    border: 0;
}
.content-item:hover {
    transform: scale(1.05);
    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
}

.content-item .hover-content {
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    backdrop-filter: blur(5px);
    padding: 1.3rem;
    opacity: 0; /* Initially hidden */
    transform: translateY(100%); /* Positioned below the visible area */
    transition: opacity 0.3s ease, transform 0.3s ease;
}
.background-black .hover-content{
    background-color: #202020cc;
    color: #fff;
}
.background-white .hover-content{
    background-color: #ffffffcc;
    color: #202020;
}
.content-item:hover .hover-content {
    opacity: 1; /* Fully visible */
    transform: translateY(0); /* Slide up into view */
}
.hover-content h3 {
    margin: 0;
    font-size: 2rem;
    font-weight: 600;
    line-height: 1.1;
}
.hover-content p {
    margin: 0.2rem 0 0;
    font-size: 1rem;
    font-weight: 300;
}

/* Footer */
.contact-section {
    padding: 40px;
    text-align: center;
    background-color: #202020;
    font-weight: 600;
}

.contact-items {
    display: inline-flex;
    gap: 8vw;
    justify-content: center;
    align-items: center;
}

.contact-items a {
    text-decoration: none; /* Remove underline */
    color: #464646;
    transition: color 0.3s;
}

.contact-items a:hover {
    color: #fff;
}

@media all and (max-width: 2150px){
    h1 { font-size: 80px; }
    .landing-page .landing-content p { font-size: 40px; }
}
@media all and (max-width: 2000px){
    h1 { font-size: 75px; }
    .landing-page .landing-content p { font-size: 38px; }
}
@media all and (max-width: 1840px){
    h1 { font-size: 70px; }
    .landing-page .landing-content p { font-size: 35px; }
}
@media all and (max-width: 1740px){
    h1 { font-size: 65px; }
    .landing-page .landing-content p { font-size: 32px; }
}
@media all and (max-width: 1640px){
    h1 { font-size: 60px; }
    .landing-page .landing-content p { font-size: 30px; }
}
@media all and (max-width: 1540px){
    h1 { font-size: 55px; }
    .landing-page .landing-content p { font-size: 27px; }
}
@media all and (max-width: 1430px){
    h1 { font-size: 50px; }
    .landing-page .landing-content p { font-size: 24px; }
}
@media all and (max-width: 1330px){
    h1 { font-size: 45px; }
    .landing-page .landing-content p { font-size: 22px; }
    .landing-page { margin-top: 80px; }
}
@media all and (max-width: 1080px){
    h1 { font-size: 39px; }
    .landing-page .landing-content p { font-size: 20px; }
    .landing-page { margin-top: 100px; }
    .text-item-container a { font-size: 22px; }
    .navbar .nav-items { gap: 8vw; }
}
@media all and (max-width: 980px){
    h1 { font-size: 38px; }
    .landing-page .landing-content p { font-size: 18px; }
    .text-item-container a { font-size: 22px; }
    .navbar .nav-items { gap: 8vw; }
    .logo img { height: 35px; }
    .navbar { padding: 40px 9vw; }
    .landing-page { padding: 0 9vw 50px 0; }
    .hover-content h3 { font-size: 1.7rem; }
    .hover-content p { font-size: 1rem; }    
}
@media all and (max-width: 880px){
    h1 { font-size: 33px; }
    .landing-page .landing-content p { font-size: 16px; }
    .navbar { padding: 40px 80px; }
    .text-item-container a { font-size: 20px; }
    .navbar .nav-items { gap: 8vw; }
}
@media all and (max-width: 790px){
    h1 { font-size: 32px; }
    .landing-page .landing-content p { font-size: 14px; }
    .navbar { padding: 40px 80px; }
    .text-item-container a { font-size: 18px; }
    .navbar .nav-items { gap: 8vw; }
}

@media all and (max-width: 2900px){
    .content-container{ grid-template-columns: repeat(auto-fill, minmax(450px, 1fr)); }
}
@media all and (max-width: 1800px){
    .content-container{ grid-template-columns: repeat(auto-fill, minmax(350px, 1fr)); }
}
@media all and (max-width: 1400px){
    .content-container{ grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); }
}


/* Responsive Mobile */
@media all and (max-width: 750px){
    .content-container{ grid-template-columns: repeat(2, 1fr); }
    .section-container {
        padding: 15vw 6vw 15vw 6vw;
        text-align: center;
    }
    .section-container h1 { margin-bottom: 5vw; }
    .text-item-container a { font-size: 15px; }

    .navbar-mobile {
        position: sticky;
        position: -webkit-sticky;
        bottom: 0;
        left: 0;
        right: 0;
        width: auto;
        display: flex;
        background: rgba(255, 255, 255, 0.8);
        backdrop-filter: blur(5px);
        padding: 10px 20px;
        position: fixed;
        justify-content: space-between;
        align-items: center;
        z-index: 1000;
    }
    .navbar-mobile nav ul {
        justify-content: space-evenly;
        width: 100%;
        gap: 20vw;
    }
    .navbar-mobile a{
        font-size: 25px;
        font-weight: 600;
    }
    .hide-in-mobile {
        display: none;
    }
    .hide-in-pc {
        display: inherit;
    }
    .contact-section {
        margin-bottom: 55px;
    }
    .landing-page{
        margin-top: 75px;
    }
}
@media all and (max-width: 560px){
    .landing-page{
        flex-direction: column;
        margin-top: -10px;
        align-items: start;
        padding: 0;
    }
    .landing-images{
        max-width: 100vw;
        padding: 0;
    }
    .left-crop{
        margin-left: -9vw;
    }
    .landing-page .landing-content {
        max-width: 100%;
        flex: 0 0 100%;
        box-sizing: border-box;
        color: #202020;
        padding: 5vw;
        margin-top: 5vw;
    }
    h1 { font-size: 50px; }
    .landing-page .landing-content p { font-size: 24px; }
    .content-item .hover-content {
        text-align: left;
        padding: 0.8rem;
    }
    .hover-content h3 { font-size: 1.2rem; }
    .hover-content p { font-size: 0.7rem; }  
}
@media all and (max-width: 480px){
    h1 { font-size: 45px; }
    .landing-page .landing-content p { font-size: 22px; }
}
@media all and (max-width: 440px){
    h1 { font-size: 40px; }
    .landing-page .landing-content p { font-size: 21px; }
}
@media all and (max-width: 380px){
    h1 { font-size: 35px; }
    .landing-page .landing-content p { font-size: 19px; }
}

